--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
+    <p><div class="1">1 - I'm a class!</div></p>
     <div id="Number-2">Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
+    <p><div class="3">3 - I'm a class, but cooler!</div></p>
     <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p><div class="5">5 - I'm a class!</div></p>
   </body>
 </html>
