--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+    <button><div class="element-1"><div class="Both">Me!</div></button>
+    <button><div class="element-2"><div class="both">Click Me!</div></button>
   </body>
 </html>
