Add classes to the css with different colors
Element 1 will have black background with white
font color.

Element 2 will have yellow background and black
font color.

correct class capatalization in index.

--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button><div class="element-1"><div class="Both">Me!</div></button>
-    <button><div class="element-2"><div class="both">Click Me!</div></button>
+    <button><div class="Element-1"><div class="Both">Me!</div></button>
+    <button><div class="Element-2"><div class="Both">Click Me!</div></button>
   </body>
 </html>
