--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button><div class="Element-1"><div class="Both">Me!</div></button>
-    <button><div class="Element-2"><div class="Both">Click Me!</div></button>
+    <button class="Element-1" class="Both">Click Me!</button>
+    <button class="Element-2" class="Both">Click Me!</button>
   </body>
 </html>
